working out align-items issues in image section

--- a/web/components/sections/ImageSection.module.css
+++ b/web/components/sections/ImageSection.module.css
@@ -103,6 +103,7 @@
 
 .caption {
   width: 100%;
+  height: 800px;
   margin: 0 auto;
   box-sizing: border-box;
   color: #fff;
@@ -122,9 +123,10 @@
   border: 1px solid transparent;
   border-radius: 10px;
   box-shadow: 0 10px 10px hsla(0, 100%, 0%, 37%); */
-  background-color: #59656F;
+  background-color: #59656f;
   padding: 3rem;
   border-radius: 6px;
+  max-height: 33%;
 
   @media (--media-min-medium) {
     max-width: calc((var(--width-small) / 2) - 3rem);
@@ -133,13 +135,13 @@
 /* .top-right .captionBox {
   border-bottom: 1px solid #1A1B34;
 } */
- 
+
 .top-right .captionBox {
-  box-shadow: -3px 3px 5px #1A1B34;
+  box-shadow: -3px 3px 5px #1a1b34;
 }
 
 .top-left .captionBox {
-  box-shadow: 3px 3px 5px #1A1B34;
+  box-shadow: 3px 3px 5px #1a1b34;
 }
 
 /*.top-right .captionBox {
